--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
                         }
                     });
         </script></head>
-        <body><div class="head"><h1>Curriculum Course Syllabus Ontology (CCSO)</h1><dl>
+        <body>
+	<div class="head"><h1>Curriculum Course Syllabus Ontology (CCSO)</h1><dl>
           <dt>Ontology IRI: </dt>
           <dd><a href="https://w3id.org/ccso/ccso">https://w3id.org/ccso/ccso</a></dd>
           <dl>HTML Documentation: <a href="https://w3id.org/ccso/ccso">https://w3id.org/ccso/ccso</a>
