--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <dd><a href="https://w3id.org/ccso/ccso">https://w3id.org/ccso/ccso</a></dd>
           <dl>HTML Documentation: <a href="https://w3id.org/ccso/ccso">https://w3id.org/ccso/ccso</a>
           </dl>
-          <dl>Ontology OWL/XML File: https://w3id.org/ccso/ccso/CCSO_owl.owl</dl>
-          <dl>Ontology RDF/XML File: https://w3id.org/ccso/ccso/CCSO_rdf.owl</dl>
-          <dl>Ontology RDF/XML File with all inferred axioms axported as ontology: https://w3id.org/ccso/ccso/CCSO_rdf_allaxioms.owl</dl>
+          <dl>Ontology OWL/XML File: <a href="https://vkreations.github.io/CCSO/CCSO_071owl.owl" target="_blank">vkreations.github.io/CCSO/CCSO_071owl.owl</a></dl>
+          <dl>Ontology RDF/XML File: <a href="https://vkreations.github.io/CCSO/CCSO_071rdf.owl" target="_blank">vkreations.github.io/CCSO/CCSO_071rdf.owl</a></dl>
+          <dl>Ontology RDF/XML File with all inferred axioms axported as ontology: https://vkreations.github.io/CCSO/CCSO_071rdf_allaxioms.owl</dl>
           </dl></dl>
           <dl><dt>Current version:</dt>
             <dd><b>0.7</b></dd>
