--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ Here is used to indicate the Author of a work.</p>
 <dt>owl</dt><dd>http://www.w3.org/2002/07/owl#</dd>
 <dt>rdf</dt><dd>http://www.w3.org/1999/02/22-rdf-syntax-ns#</dd>
 <dt>rdfs</dt><dd>http://www.w3.org/2000/01/rdf-schema#</dd>
-<dt>schema</dt><dd>http://schema.org/</dd>
+<dt>schema.org</dt><dd>http://schema.org/</dd>
 <dt>skos</dt><dd>http://www.w3.org/2004/02/skos/core#</dd>
 <dt>swrl</dt><dd>http://www.w3.org/2003/11/swrl#</dd>
 <dt>swrlb</dt><dd>http://www.w3.org/2003/11/swrlb#</dd>
